--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -11,49 +11,82 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
 
           <li class="nav-item active dropdown" [ngClass]="{'show': dropshow}" (click)="this.dropshow = !this.dropshow">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+            <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               Solutions
             </a>
             <div class="dropdown-menu dropdown-menu-left" [ngClass]="{'show': dropshow}"
               aria-labelledby="navbarDropdownMenuLink">
-              <ul>
-                <li><a class="dropdown-item" href="#">Staffing Solutions</a></li>
-                <li><a class="dropdown-item" href="#"> <p>Smooth associate onboarding, access to the Health&Safety, WHMIS
-                    and other courses</p>
-                  </a></li>
-
-              </ul>
-              <ul>
-                <li><a class="dropdown-item" href="#">Temporary Employment</a></li>
-                <li><a class="dropdown-item" href="#">Temporary employment with cutting-edge technologies and
-                    specialized staffing strategies
-                  </a></li>
-
-              </ul>
-              <ul>
-                <li><a class="dropdown-item" href="#">Job Marketplace</a></li>
-                <li><a class="dropdown-item" href="#">Hire from our database of candidates. We are an AI equipped job
-                    marketplace</a></li>
-              </ul>
-              <ul>
-                <li><a class="dropdown-item" href="#">Temporary to Permanent</a></li>
-                <li><a class="dropdown-item" href="#">Find the suitable candidate for the position and then easily
-                    convert them to a full-time worker.
-                  </a></li>
-              </ul>
-              <ul>
-                <li><a class="dropdown-item" href="#">Vendor Management</a></li>
-                <li><a class="dropdown-item" href="#"> Audit vendor's hiring process anytime and from anyhwhere, manage
-                    discrepancies and view reports
-                  </a></li>
-              </ul>
-              <ul>
-                <li><a class="dropdown-item" href="#">Placement & Fulfillment</a></li>
-                <li><a class="dropdown-item" href="#"> We intelligently compile profile information from applicants to
-                    identify the best match.
-                  </a></li>
-              </ul>
+              <div class="row">
+                <div class="col-sm-6">
+                    <a href="staffing-solutions">
+                        <div class="d-flex align-items-center py-3 px-1 rounded-3">
+                            <div class="text ps-3">
+                               Staffing Solutions
+                                <div class="description">Smooth associate onboarding, access to the Health&Safety, WHMIS
+                                  and other courses</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6">
+                    <a  href="temporary-employment" >
+                        <div class="d-flex align-items-center py-3 px-1 rounded-3">
+                           
+                            <div class="text ps-3">
+                               Temporary Employment
+                                <div class="description">Temporary employment with cutting-edge technologies and
+                                  specialized staffing strategies</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6">
+                    <a href="direct-hires" >
+                        <div class="d-flex align-items-center py-3 px-1 rounded-3">
+                          
+                            <div class="text ps-3">
+                               Job Marketplace
+                                <div class="description">Hire from our database of candidates. We are an AI equipped job
+                                  marketplace</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6">
+                    <a  href="temporary-to-permanent">
+                        <div class="d-flex align-items-center py-3 px-1 rounded-3">
+                            <div class="text ps-3">
+                               Temporary to Permanent
+                                <div class="description">Find the suitable candidate for the position and then easily
+                                  convert them to a full-time worker</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6">
+                    <a href="job-order">
+                        <div class="d-flex align-items-center py-3 px-1 rounded-3">
+                            <div class="text ps-3">
+                               Vendor Management
+                                <div class="description">Audit vendor's hiring process anytime and from anyhwhere, manage
+                                  discrepancies and view reports</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6">
+                    <a href="placement-and-fulfillment">
+                        <div class="d-flex align-items-center py-3 px-1 rounded-3">
+                            <div class="text ps-3">
+                               Placement & Fulfillment
+                                <div class="description">We intelligently compile profile information from applicants to
+                                  identify the best match</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
             </div>
           </li>
           <li class="nav-item">
@@ -68,8 +101,8 @@
 
         </ul>
         <form class="d-flex" role="search">
-          <button type="button" class="btn btn-light">Login</button>
-          <button type="button" class="btn btn-success ms-3">Sign up</button>
+          <button type="button" class="btn btn-light" (click)="openURl('auth/sign-in')">Login</button>
+          <button type="button" class="btn btn-success ms-3" (click)="openURl('auth/sign-up/employer')">Sign up</button>
         </form>
       </div>
     </div>
