--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -497,22 +497,4 @@
     </div>
   </div>
 </section>
-<section>
-  <div class="container" data-aos="zoom-in-up" data-aos-duration="5000">
-    <div class="pt-5 row">
-      <div class="d-md-flex justify-content-center">
-        <h3 class="commn-header text-position">
-          Let’s grow together
-        </h3>
-      </div>
-      <div class="d-md-flex justify-content-center">
-        <p class="text-center pt-pb mb-0 w-40">Try out our whole recruitment system risk-free, no credit card required.
-          One-stop-shop for job advertising, candidate acquisition, and application management.</p>
-      </div>
-      <div class="d-flex justify-content-center pb-5">
-        <img src="/assets/5.jpg" class="" alt="" width="50%" />
-      </div>
-
-    </div>
-  </div>
-</section>
+<app-lets-grow></app-lets-grow>
