--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -151,3 +151,29 @@ padding-bottom: 2.5rem;
 .text-decoration-none:hover{
     text-decoration: underline !important;
 }
+
+.hov-eff:hover {
+    outline: none;
+    color: red;
+    -webkit-animation: blink 3s linear infinite;
+    -moz-animation: blink 3s linear infinite;
+    -ms-animation: blink 3s linear infinite;
+    -o-animation: blink 3s linear infinite;
+    animation: blink 3s linear infinite;
+  }
+  
+  @-webkit-keyframes blink { 
+     0% {opacity: 0.5;}
+     50%{opacity:1;}
+     100%{opacity:0.5;}
+  }
+  @-moz-keyframes blink { 
+     0% {opacity: 0.5;}
+     50%{opacity:1;}
+     100%{opacity:0.5;}
+  }
+  @keyframes blink { 
+     0% {opacity: 0.5;}
+     50%{opacity:1;}
+     100%{opacity:0.5;}
+  }
