--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,3 +78,157 @@ body {
 }
 
 @media screen and (max-width:1198px) {}
+
+.section-para{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+    font-weight: 500;
+    color: white;
+}
+.section-text{
+    color: white;
+    font-size: 16px;
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem 
+}
+img.hidden {
+    position: absolute;
+    right: 0;
+    top: auto;
+    bottom: auto;
+    left: auto;
+    transform: translate(-51%, -68%);
+    transition-duration: .3s;
+
+}
+// img.hidden:hover{
+// --tw-rotate: 6deg !important;
+//     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
+// }
+a.btn.btn-outline-secondary.text-white {
+    border: 1px solid white;
+    padding: 12px 80px;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-bottom: 15px;
+}
+.commn-header{
+    text-align: center;
+    width: 56%;
+    font-weight: 600;
+    --tw-text-opacity: 1;
+    color: rgb(75 85 99 / var(--tw-text-opacity));
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+}
+.category-box{
+    padding: 0.75rem 1.25rem;
+    cursor: pointer;
+    background-color: #eff9f7 !important;
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / .1), 0 4px 6px -4px rgb(0 0 0 / .1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.category-box:hover{
+    --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / .1), 0 8px 10px -6px rgb(0 0 0 / .1);
+    --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.category-header{
+    font-weight: 500;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    margin-bottom: 0;
+    white-space: nowrap;
+}
+.category-text{
+    --tw-text-opacity: 1;
+    color: rgb(107 114 128 / var(--tw-text-opacity));
+    font-size: .875rem;
+    line-height: 1.25rem;
+    margin-bottom: 0;
+}
+// .img-fluid {
+//     max-width: 83%;
+//     height: auto;
+// }
+img.img-fluid.mobile {
+    width: 83% !important;
+    height: auto;
+}
+.sec-hed{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    --tw-text-opacity: 1;
+    font-weight: 600;
+    margin-top: 1.25rem;
+    margin-bottom: 5px;
+}
+.clr{
+    --tw-text-opacity: 1;
+    color: rgb(249 115 22 / var(--tw-text-opacity));
+}
+.clr_1{
+    --tw-text-opacity: 1;
+    color: rgb(244 63 94 / var(--tw-text-opacity));
+}
+.clr_2{
+    --tw-text-opacity: 1;
+    color: rgb(20 184 166 / var(--tw-text-opacity));
+}
+.clr_3{
+    --tw-text-opacity: 1;
+    color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+.sec-hed-para{
+    font-weight: 600;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    --tw-text-opacity: 1;
+    color: hsl(var(--n) / 1);
+    margin-bottom: 5px;
+}
+.sec-hed-text{
+    width: 66%;
+    text-align: justify;
+    --tw-text-opacity: 1;
+    color: hsl(var(--n) / 1);
+}
+.commn-subheader{
+    text-align: center;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    --tw-text-opacity: 1;
+    color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+.body-header{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    font-weight: 600;
+    --tw-text-opacity: 1;
+    color: hsl(var(--n) / 1);
+    text-align: center;
+}
+.para-text{
+    width: 62%;
+    --tw-text-opacity: 1;
+    color: rgb(107 114 128 / var(--tw-text-opacity));
+text-align: center;
+margin-bottom: 0;
+}
+.pt-pb{
+padding-top: 2.5rem;
+padding-bottom: 2.5rem;
+
+}
+.w-40 {
+    width: 40%;
+}
+.bg-clr{
+    --tw-bg-opacity: 1;
+    background-color: rgb(240 253 244 / var(--tw-bg-opacity));
+}
+.text-decoration-none:hover{
+    text-decoration: underline !important;
+}
