--- a/src/styles.scss
+++ b/src/styles.scss
@@ -220,7 +220,10 @@ margin-bottom: 0;
 .pt-pb{
 padding-top: 2.5rem;
 padding-bottom: 2.5rem;
-
+}
+.mt-mb{
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem
 }
 .w-40 {
     width: 40%;
