--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -93,10 +93,10 @@
             <a class="nav-link" href="#"> Pricing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link" href="blog">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact-us">Contact</a>
           </li>
 
         </ul>
