update others component

--- a/src/app/component/staffing-solutions/staffing-solutions.component.html
+++ b/src/app/component/staffing-solutions/staffing-solutions.component.html
@@ -9,7 +9,7 @@
       <a href="" class="btn btn-outline-secondary">Talk to Us</a>
     </div>
     <div class="col-md-6">
-      <img src="/assets/5.jpg" alt="" class="img-fluid">
+      <img src="/assets/5.png" alt="" class="img-fluid">
     </div>
   </div>
 </div>
