--- a/src/app/shared/lets-grow/lets-grow.component.html
+++ b/src/app/shared/lets-grow/lets-grow.component.html
@@ -11,7 +11,7 @@
           One-stop-shop for job advertising, candidate acquisition, and application management.</p>
       </div>
       <div class="d-flex justify-content-center pb-5">
-        <img src="/assets/5.jpg" class="" alt="" width="50%" />
+        <img src="/assets/5.png" class="" alt="" width="50%" />
       </div>
 
     </div>
