--- a/src/app/component/staffing-solutions/staffing-solutions.component.scss
+++ b/src/app/component/staffing-solutions/staffing-solutions.component.scss
@@ -59,3 +59,34 @@ a.btn.btn-outline-secondary {
     margin-bottom: 0.5rem;
 
 }
+.staffing-mid-header{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+    font-weight: 600;
+    margin-bottom: 0;
+    --tw-text-opacity: 1;
+    color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+.staffing-sub-header{
+    font-weight: 700;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+    --tw-text-opacity: 1;
+    color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+.staffing-sub-header2{
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 600;
+    --tw-text-opacity: 1;
+    color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+.grid-text-2{
+    line-height: 2;
+    width: 83.333333%;
+    margin-top: 2rem;
+    --tw-text-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-text-opacity));
+}
