--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -90,7 +90,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> Pricing</a>
+            <a class="nav-link" href="Pricing"> Pricing</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="blog">Blog</a>
