--- a/src/app/component/staffing-solutions/staffing-solutions.component.html
+++ b/src/app/component/staffing-solutions/staffing-solutions.component.html
@@ -4,7 +4,7 @@
       <h1 class="solution-header">Solutions for Staffing Needs of All Sizes of Businesses</h1>
       <p class="solution-text">
         <strong>Permanent, Temporary, and Temp-to-Permanent</strong> <br>
-        Customized staffing services supported by our talented pool of job-seekers and innovative technology platform. 
+        Customized staffing services supported by our talented pool of job-seekers and innovative technology platform.
       </p>
       <a href="" class="btn btn-outline-secondary">Talk to Us</a>
     </div>
@@ -16,23 +16,25 @@
 <div class="bg-clr-1 mt-mb">
   <div class="container">
     <div class="pt-pb">
-      <p class="solution-common-header">Get rid of costly recruiting and screening processes by using our trained and ready staff. Digitally-Verified Profiles and Personnel Data for Better Hiring Decisions</p>
+      <p class="solution-common-header">Get rid of costly recruiting and screening processes by using our trained and
+        ready staff. Digitally-Verified Profiles and Personnel Data for Better Hiring Decisions</p>
     </div>
     <div class="text-center">
       <img src="/assets/13-transparent.png" alt="">
     </div>
-   
-      <div class="mtop-5">
-        <div class="row gx-5">
+
+    <div class="mtop-5 pb-4">
+      <div class="row gx-5">
         <div class="col-md-6 text-center">
           <div class="row justify-content-center">
             <div class="col-md-8">
               <img src="/assets/icons/icon3.svg" alt="" />
               <p class="grid-header">
-                  Our Exceptional Staffing Method
+                Our Exceptional Staffing Method
               </p>
-              <p  class="grid-text">
-                  Bringing Together People, Procedures, and Technology. Bringing Together People, Procedures, and Technology
+              <p class="grid-text">
+                Bringing Together People, Procedures, and Technology. Bringing Together People, Procedures, and
+                Technology
               </p>
             </div>
           </div>
@@ -40,62 +42,103 @@
         <div class="col-md-6 text-center">
           <div class="row justify-content-center">
             <div class="col-md-8">
-              <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="64"
-              height="64"
-              viewBox="0 0 64 64">
-              <g fill="none" fill-rule="evenodd">
+              <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64">
+                <g fill="none" fill-rule="evenodd">
                   <path d="M4.5 42v13.5h47V51M4.5 38v1" stroke="#008075"></path>
                   <path stroke="#008075" d="M12.5 46V12M51 11.5h8.5v34h-47v-34H21M26 11.5h19"></path>
                   <path stroke="#008075" d="M55.5 46v4.5h-47v-35H12"></path>
-                  <path
-                  stroke="#02BFD3"
-                  d="M26.5 23.5h-.4c-.6.1-1.2.3-1.6.7-2.8 2.2-1.3 8.3 2 8.4 3.3.1 4.7-6.2 2-8.4-.5-.4-1-.6-1.6-.7h-.4zM20.8 35.4c.3-1.4 1.2-2.7 2.4-3.6M29.7 31.9c1.2.8 2.1 2.1 2.3 3.6"
-                  ></path>
-                  <path
-                  stroke="#008075"
-                  d="M39 24.5h15M39 28.5h15M39 32.5h6M48 32.5h-1M26.5 11.5c0 1.1-.9 2-2 2h-2c-1.1 0-2-.9-2-2s.9-2 2-2h2c1.1 0 2 .9 2 2zM47 9.5h2c1.1 0 2 .9 2 2s-.9 2-2 2h-2c-1.1 0-2-.9-2-2s.9-2 2-2zM26.5 19.5a9 9 0 0 1 9 9 9 9 0 0 1-9 9 9 9 0 0 1-9-9 9 9 0 0 1 9-9z"
-                  ></path>
-              </g>
+                  <path stroke="#02BFD3"
+                    d="M26.5 23.5h-.4c-.6.1-1.2.3-1.6.7-2.8 2.2-1.3 8.3 2 8.4 3.3.1 4.7-6.2 2-8.4-.5-.4-1-.6-1.6-.7h-.4zM20.8 35.4c.3-1.4 1.2-2.7 2.4-3.6M29.7 31.9c1.2.8 2.1 2.1 2.3 3.6">
+                  </path>
+                  <path stroke="#008075"
+                    d="M39 24.5h15M39 28.5h15M39 32.5h6M48 32.5h-1M26.5 11.5c0 1.1-.9 2-2 2h-2c-1.1 0-2-.9-2-2s.9-2 2-2h2c1.1 0 2 .9 2 2zM47 9.5h2c1.1 0 2 .9 2 2s-.9 2-2 2h-2c-1.1 0-2-.9-2-2s.9-2 2-2zM26.5 19.5a9 9 0 0 1 9 9 9 9 0 0 1-9 9 9 9 0 0 1-9-9 9 9 0 0 1 9-9z">
+                  </path>
+                </g>
               </svg>
-              <p  class="grid-header">People</p>
-              <p  class="grid-text">
-                  JobCart facilitates the employment-readiness of job-seeking candidates by utilizing a novel community-based recruitment method.
+              <p class="grid-header">People</p>
+              <p class="grid-text">
+                JobCart facilitates the employment-readiness of job-seeking candidates by utilizing a novel
+                community-based recruitment method.
               </p>
             </div>
           </div>
-        
+
         </div>
         <div class="col-md-6 text-center mtop-5">
           <div class="row justify-content-center">
             <div class="col-md-8">
               <img src="/assets/icons/icon4.svg" alt="">
-              <p  class="grid-header">Processes</p>
-              <p  class="grid-text">
-                All phases of the hiring procedure (including recruitment, placement, workforce management, payroll, and health and safety) are covered by our comprehensive staffing solution.
+              <p class="grid-header">Processes</p>
+              <p class="grid-text">
+                All phases of the hiring procedure (including recruitment, placement, workforce management, payroll, and
+                health and safety) are covered by our comprehensive staffing solution.
               </p>
             </div>
           </div>
-        
+
         </div>
         <div class="col-md-6 text-center mtop-5">
           <div class="row justify-content-center">
             <div class="col-md-8">
               <img src="/assets/icons/icon6.svg" alt="" />
-              <p  class="grid-header">Technology</p>
-              <p  class="grid-text">
-                The enterprise-grade human capital technology behind JobCart's online and mobile applications puts you in command of all your staffing decisions.
+              <p class="grid-header">Technology</p>
+              <p class="grid-text">
+                The enterprise-grade human capital technology behind JobCart's online and mobile applications puts you
+                in command of all your staffing decisions.
               </p>
             </div>
           </div>
-        
+
         </div>
       </div>
     </div>
-   
+
   </div>
 </div>
- 
+<div class="container">
+  <div class="row pt-3">
+    <div class="col-md-6">
+      <div>
+        <img class="img-fluid" src="/assets/organise.svg" alt="">
+      </div>
+    </div>
+    <div class="col-md-6">
+      <p class="staffing-mid-header">Setting You Up for Success in the Future</p>
+      <p class="staffing-sub-header">Cloud Based Human Capital</p>
+      <p class="grid-text">Complete with cutting-edge cloud technologies and AI, JobCart's staffing solution provides
+        you with insightful, actionable data on your employees. Data collected in real-time allows us to make educated
+        guesses about a variety of employee characteristics, including but not limited to appropriateness, quality,
+        timeliness, dependability, turnover rate, and number of no-shows.</p>
+      <p class="staffing-sub-header">Online Social Networking</p>
+      <p class="grid-text">With JobCart's hyper-growth talent acquisition strategy, you can analyse your employees
+        extrinsic and intrinsic incentives and create a devoted workforce of temporary, permanent, seasonal, and
+        contingent workers with ease.</p>
+    </div>
+  </div>
+</div>
+<div style="background-color: #eff9f7 !important;">
+  <div class="container">
+    <div class="row" style="padding-top: 6rem;
+    padding-bottom: 6rem">
+      <div class="col-md-6" style="padding-left: 12rem;">
+        <p class="staffing-sub-header2">AI-Driven Shift Scheduling and Personnel Roster</p>
+        <p class="grid-text-2">With JobCart, you can easily manage a large workforce by taking advantage of its robust,
+          AI-powered roster and scheduling tools, which provide real-time visibility into workforce availability, generate
+          shift schedules ready for publication, and account for employees' shift availabilities and preferred start and
+          end times to boost morale and reduce turnover.</p>
+        <p class="staffing-sub-header">Superior Safety</p>
+        <p class="grid-text">Quantum ledger technology in JobCart harnesses the potential of blockchain to protect the
+          privacy of HR, employment, payroll, and personally identifiable information, while role-based access control
+          ensures safe, instant access to historical data, operational reports, budgets, and spending reports for smart,
+          timely decision making.</p>
+      </div>
+      <div class="col-md-6">
+        <img src="/assets/2.jpg" alt="" class="img-fluid">
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
 <app-lets-grow></app-lets-grow>
