--- a/src/app/component/blog/blog.component.html
+++ b/src/app/component/blog/blog.component.html
@@ -1,1 +1,58 @@
-<p>blog works!</p>
+<div class="container">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      <div class="col">
+        <div class="card">
+          <div class="card-image-wrapper">
+            <img src="assets/blog_1.jpg" class="card-img-top img-fluid" alt="...">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on  the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="link">Go somewhere <i class="fa-solid fa-arrow-right ml-2"></i></a>
+          </div>
+        </div>
+      </div>
+      
+      <div class="col">
+        <div class="card">
+          <div class="card-image-wrapper">
+            <img src="assets/blog_1.jpg" class="card-img-top img-fluid" alt="...">
+          </div>
+          
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="link">Go somewhere <i class="fa-solid fa-arrow-right ml-2"></i></a>
+          </div>
+        </div>
+      </div>
+      
+      <div class="col">
+        <div class="card">
+          <div class="card-image-wrapper">
+            <img src="assets/blog_1.jpg" class="card-img-top img-fluid" alt="...">
+          </div>
+          
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="link">Go somewhere <i class="fa-solid fa-arrow-right ml-2"></i></a>
+          </div>
+        </div>
+      </div>
+      
+      <div class="col">
+        <div class="card">
+          <div class="card-image-wrapper">
+            <img src="assets/blog_1.jpg" class="card-img-top img-fluid" alt="...">
+          </div>
+          
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="link">Go somewhere <i class="fa-solid fa-arrow-right ml-2"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
