--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -91,7 +91,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Pricing"> Pricing</a>
+              <a class="nav-link" href="pricing"> Pricing</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="blog">Blog</a>
