--- a/src/app/component/pricing/pricing.component.html
+++ b/src/app/component/pricing/pricing.component.html
@@ -1,1 +1,42 @@
-<p>pricing works!</p>
+<div class="container-fluid">
+<div class="pricing-wrap">
+    <p class="pricing-header">Our Pricing Plan</p>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="pricing-card-wrap">
+                <div class="p-5">
+                    <p class="pricing-card-header text-danger">
+                        Trial
+                    </p>
+                    <p class=""><span class="pricing-amt">$0</span> / Post
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="pricing-card-wrap">
+                <div class="p-5">
+                    <p class="pricing-card-header text-danger">
+                        Pro
+                    </p>
+                    <p class=""><span class="pricing-amt">$2</span> CAD / post per day
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="pricing-card-wrap">
+                <div class="p-5">
+                    <p class="pricing-card-header text-danger">
+                        Customize
+                    </p>
+                    <p class=""><span class="pricing-amt">Your account</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
+
